--- a/app/views/admin/upload/upload_show.html.erb
+++ b/app/views/admin/upload/upload_show.html.erb
@@ -271,27 +271,65 @@ return;
 		console.log("OBJECT FILE", object);
 		console.log("CURRENT FOLDER FILE", currentFolder);
 
-		if (myArray[currIndex+1]<myArray.length && myArray[currIndex+1].includes(currentFolder.id)) {
+	/*	if (myArray[currIndex+1]<myArray.length && myArray[currIndex+1].includes(currentFolder.id)) {
 
 			//currentFolder = currentFolder.parentElement.parentElement; // document.getElementById(currentFolder.parentElement.id.split(currentFolder.id.split(currentFolder.parentElement.id)));
 			currentFolder = document.getElementById(currentFolder.id.split(myArray[currIndex+1].split(currentFolder.id))) || root;
+		}*/
+
+		//else 
+
+		if(myArray[currIndex+1].includes(currentFolder.id)) {
+				console.log("next index", myArray[currIndex+1]);
+
+				if(myArray[currIndex+1].match(folderREGEX).input === myArray[currIndex+1].match(folderREGEX)[0]){
+					currentFolder = currentFolder.parentElement;// === root ? currentFolder = root: currentFolder.parentElement;
+					return;
+
+				}
+
+
+				else if(myArray[currIndex+1].match(fileREGEX).input === myArray[currIndex+1].match(fileREGEX)[0]) {
+				//currentFolder = currentFolder === root ? currentFolder = root : currentFolder.parentElement;
+				console.log("POPPIN");
+					currentFolder = currentFolder;
+					return;
+
+				}
+
+				else {
+					currentFolder = currentFolder.parentElement;
+					return;
+
+				}
+		}
+		else {
+
+			//currentFolder = currentFolder === root? root : currentFolder.parentElement;
+			console.log("THE NEW FUNC");
+			console.log("next", myArray[currIndex+1]);
+
+			// do parentElement until currIndex+1 includes currentFolder, then currentFolder = currentFolder
+			currentFolder = (function() {
+
+			/*	while(root.id + myArray[currIndex+1] != root.id + currentFolder.parentElement + myArray[currIndex+1] && currentFolder != root){
+					currentFolder = currentFolder.parentElement;
+				}*/
+
+				while(!myArray[currIndex+1].includes(currentFolder.id) && currentFolder != root) {
+					currentFolder = currentFolder.parentElement;
+				}
+
+				return currentFolder;
+
+			})();
+
+
+
+			// loop parentElement until parentElement + object === root + object;
+			
 		}
 
-
-
-
-
-
-
-
-
-
-
-
-
-		else if(myArray[currIndex+1].includes(currentFolder.id)){
-			currentFolder = currentFolder === root ? currentFolder = root : currentFolder.parentElement;
-		}
 
 
 
@@ -301,6 +339,7 @@ return;
 
 
 		console.log("FOLDER AFTER MODIF", currentFolder);
+
 		return;
 	}
 
@@ -320,7 +359,8 @@ return;
 				}
 				if(element.match(fileREGEX).input === element.match(fileREGEX)[0]){
 					//element name is *, without a slash at the end, then it is a file.
-					createFile(element,currentIndex);
+					currentIndex = index;
+					createFile(element, currentIndex);
 					counter = counter + 1;
 					return;
 				}
