--- a/app/views/admin/upload/upload_show.html.erb
+++ b/app/views/admin/upload/upload_show.html.erb
@@ -23,6 +23,7 @@ li {
 margin-left: 100px;
 margin-top: 20px;
 margin-bottom: 20px;
+list-style-type: circle;
 
 }
 ul, span {
@@ -131,59 +132,60 @@ return;
 		}*/
 
 		//else 
+		if(currIndex+1<myArray.length){
 
-		if(myArray[currIndex+1].includes(currentFolder.id)) {
-				console.log("next index", myArray[currIndex+1]);
+			if(myArray[currIndex+1].includes(currentFolder.id)) {
+					console.log("next index", myArray[currIndex+1]);
 
-				if(myArray[currIndex+1].match(folderREGEX).input === myArray[currIndex+1].match(folderREGEX)[0]){
-					currentFolder = currentFolder.parentElement;// === root ? currentFolder = root: currentFolder.parentElement;
-					return;
+					if(myArray[currIndex+1].match(folderREGEX).input === myArray[currIndex+1].match(folderREGEX)[0]){
+						currentFolder = currentFolder.parentElement;// === root ? currentFolder = root: currentFolder.parentElement;
+						return;
 
-				}
+					}
 
 
-				else if(myArray[currIndex+1].match(fileREGEX).input === myArray[currIndex+1].match(fileREGEX)[0]) {
-				//currentFolder = currentFolder === root ? currentFolder = root : currentFolder.parentElement;
-				console.log("POPPIN");
-					currentFolder = currentFolder;
-					return;
+					else if(myArray[currIndex+1].match(fileREGEX).input === myArray[currIndex+1].match(fileREGEX)[0]) {
+					//currentFolder = currentFolder === root ? currentFolder = root : currentFolder.parentElement;
+					console.log("POPPIN");
+						currentFolder = currentFolder;
+						return;
 
-				}
+					}
 
-				else {
-					currentFolder = currentFolder.parentElement;
-					return;
+					else {
+						currentFolder = currentFolder.parentElement;
+						return;
 
-				}
+					}
+			}
+			else {
+
+				//currentFolder = currentFolder === root? root : currentFolder.parentElement;
+				console.log("THE NEW FUNC");
+				console.log("next", myArray[currIndex+1]);
+
+				// do parentElement until currIndex+1 includes currentFolder, then currentFolder = currentFolder
+				currentFolder = (function() {
+
+				/*	while(root.id + myArray[currIndex+1] != root.id + currentFolder.parentElement + myArray[currIndex+1] && currentFolder != root){
+						currentFolder = currentFolder.parentElement;
+					}*/
+
+					while(!myArray[currIndex+1].includes(currentFolder.id) && currentFolder != root) {
+						currentFolder = currentFolder.parentElement;
+					}
+
+					return currentFolder;
+
+				})();
+
+
+
+				// loop parentElement until parentElement + object === root + object;
+				
+			}
+
 		}
-		else {
-
-			//currentFolder = currentFolder === root? root : currentFolder.parentElement;
-			console.log("THE NEW FUNC");
-			console.log("next", myArray[currIndex+1]);
-
-			// do parentElement until currIndex+1 includes currentFolder, then currentFolder = currentFolder
-			currentFolder = (function() {
-
-			/*	while(root.id + myArray[currIndex+1] != root.id + currentFolder.parentElement + myArray[currIndex+1] && currentFolder != root){
-					currentFolder = currentFolder.parentElement;
-				}*/
-
-				while(!myArray[currIndex+1].includes(currentFolder.id) && currentFolder != root) {
-					currentFolder = currentFolder.parentElement;
-				}
-
-				return currentFolder;
-
-			})();
-
-
-
-			// loop parentElement until parentElement + object === root + object;
-			
-		}
-
-
 
 
 
@@ -335,29 +337,62 @@ return;
 
 
 
-	$('#upload-file-form').submit(function(event){
+	$('#upload-file').click(function(event){
 		event.preventDefault();
+		console.log("selected", document.getElementsByClassName('selected'));
+		console.log("sel length", document.getElementsByClassName('selected').length);
+		var uploadRoute;
+		if(document.getElementsByClassName('selected').length > 0) {
+			uploadRoute = document.getElementsByClassName('selected')[0].innerText;
+		}
+		else {
+			uploadRoute = "";
+		}
+		console.log("royte", uploadRoute);
 
-		uploadRoute = document.getElementsByClassName('selected')[0].id === root.id ? "" : document.getElementsByClassName('selected')[0].id;
 
-		var filesToUpload = $('#file_input_field').files
-		var formData = new formData();
+		var filesToUpload = document.getElementById("file_input_field").files
+		console.log("files to up", filesToUpload);
+		var formData = new FormData();
+		var utf = document.querySelectorAll("input[name='utf8']")[0].getAttribute("value");
+		var authenticityToken = document.querySelectorAll("input[name='authenticity_token']")[0].getAttribute("value");
+		formData.append("utf-8", utf);
+		formData.append("authenticity-token", authenticityToken);
+		formData.append("file_route", uploadRoute);
 
-		filesToUpload.map(function(element, index, array) {
+		[].slice.call(filesToUpload).map(function(element, index, array) {
 
 			if(!element.type.match('image.*')) {
-				return;
+			
+			return;
 			}
 			else {
-				formData.append("image", element.name);
+				formData.append("image", element, element.name);
 			}
 
 		});
+		console.log("form data", formData);
+
+		//$.ajax({url: 'upload', data: formData, type: 'POST'});
+
+		var xhr = new XMLHttpRequest();
+		xhr.open('POST', 'upload', true);
+		xhr.setRequestHeader('X-CSRF-TOKEN', document.querySelectorAll('meta[name="csrf-token"]')[0].getAttribute("content"));
+		//console.log("metatag",$('input[name="authenticity-token"]'));
+		//$('textarea[name="clientMessage"]')
+		xhr.send(formData);
+
+		if(xhr.status === 200) {
 
 
-		$.ajax({url: 'upload_file', data: formData, type: 'POST'});
+		}
 
-		
+	
+
+	});
+
+	$('#upload-file-form').submit(function(event) {
+	event.preventDefault();
 
 	});
 
