--- a/app/views/admin/_flash_messages.html.erb
+++ b/app/views/admin/_flash_messages.html.erb
@@ -1,6 +1,7 @@
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
+      <%if @user %>
 <% if @user.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger" style="background-color:red, color:white">
@@ -12,4 +13,5 @@
     <% end %>
     </ul>
   </div>
+<% end %>
 <% end %>
