--- a/app/views/admin/upload/upload_show.html.erb
+++ b/app/views/admin/upload/upload_show.html.erb
@@ -16,19 +16,22 @@
 
 <% files_in_bucket = s3.list_objects(bucket: ENV['AWS_S3_BUCKET']).contents.map(&:key) %>
 
-<script>
+<script id="initial-script">
 initialArray = <%= raw files_in_bucket %> // a global to be deleted on document.ready
 </script>
 
 
 <style>
-li {
-margin-left: 100px;
-margin-top: 20px;
-margin-bottom: 20px;
-list-style-type: circle;
 
+li {
+margin-left: 40px;
+margin-top: 15px;
+margin-bottom: 15px;
+cursor: pointer;
+list-style-type: disc;
+list-style-position: inside;
 }
+
 ul, span {
 cursor: pointer;
 
@@ -42,12 +45,28 @@ text-decoration: underline blue;
 }
 
 .selected {
-background-color: blue;
+background-color: #7784D9;
 color: white;
 font-weight: bold;
 font-style: italic;
-
+border-radius: 2px;
+border: 1px solid blue;
 }
+
+.alert {
+background-color: rgb(200, 200, 200);
+color: #293952;
+border: 1px solid blue;
+}
+
+.alert-danger {
+background-color: #E3623B;
+color: white;
+}
+form {
+width: 100%;
+}
+
 </style>
 
 <span class="action-title">File Manager</span>
