--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -13,5 +13,6 @@
 <%= render 'layouts/bottomBar' %>
 </div>
 
-
-  <%= javascript_include_tag 'application'%>
+	<%= javascript_include_tag 'jquery' %>
+	<%= javascript_include_tag 'jquery_ujs' %>
+  	<%= javascript_include_tag 'script-main' %>
